@@ -2,7 +2,7 @@
 # Kernel/System/EmailParser.pm - the global email parser module
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: EmailParser.pm,v 1.92 2009/11/25 23:25:24 mh Exp $
+# $Id: EmailParser.pm,v 1.93 2009/12/07 14:00:27 mn Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -24,7 +24,7 @@ use MIME::Words qw(:all);
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.92 $) [1];
+$VERSION = qw($Revision: 1.93 $) [1];
 
 =head1 NAME
 
@@ -322,7 +322,6 @@ sub GetCharset {
 
     # find charset
     $Self->{HeaderObject}->unfold();
-    $Self->{HeaderObject}->combine('Content-Type');
     my $Line = $Self->{HeaderObject}->get('Content-Type') || '';
     chomp $Line;
     my %Data = $Self->GetContentTypeParams( ContentType => $Line );
@@ -787,7 +786,7 @@ sub GetContentTypeParams {
         $Param{Charset} = $Param{ContentType};
         $Param{Charset} =~ s/.*?charset=(.*?)/$1/i;
         $Param{Charset} =~ s/"|'//g;
-        $Param{Charset} =~ s/(.+?);.*/$1/g;
+        $Param{Charset} =~ s/(.+?)(;|\s).*/$1/g;
     }
     if ( !$Param{Charset} ) {
         if (
@@ -888,6 +887,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.92 $ $Date: 2009/11/25 23:25:24 $
+$Revision: 1.93 $ $Date: 2009/12/07 14:00:27 $
 
 =cut
