@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1084 2009/12/07 13:31:08 mg Exp $
+# $Id: CHANGES,v 1.1085 2009/12/07 14:00:27 mn Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.5.0 beta1 (????/??/??)
+ - (2009/12/07) Fixed bug#3887 - Processing headers with faulty charset definitions.
  - (2009/12/04) Removed OptionElement() from Layout.pm. Use BuildSelection()
     instead.
  - (2009/12/04) Changed line chart library again: from OFC to Flot.
